# tengwar

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh
include/: expression.hpp  freader.hpp  lexer.hpp  token.hpp
src/: freader.cpp  lexer.cpp
test/: CMakeLists.txt
test/files/fe/: basic_lexer_test.txt  identifier.txt  integer.txt  keyword.txt  operator.txt
test/files/fs/: reader_test.txt
test/include/: freader_test_fixture.hpp
test/src/: lexer_test.cpp  reader_test.cpp
